src/assets/style-dark.css
/* ... */
.btn-red {
    color: white;
    background-color: var(--red-color);
    border-color: var(--red-color);
}

.btn-red:hover {
    color: white;
    background-color: var(--red-hover-color);
    border-color: var(--red-hover-color);
}

.bottom-right {
    position: absolute;
    bottom: 8px;
    right: 16px;
}

.bottom-right .fab {
    background-color: white;
    padding: 5px;
}


/* TIMELINE */

.vl {
    border-left: 6px solid #2ea2d9;
    height: 100%;
    border-bottom: 1px solid lightgray;
}

.pointerClass {
    cursor: pointer;
}


/* DAILY / DASHBOARD */
.tooltipLargeLeft {
    --bs-tooltip-max-width: 500px !important;
}

.tooltipLargeLeft>.tooltip-inner {
    text-align: left;
}

/*Must be inside .row or else too big but in that case height 100% (of the row div)*/

.dailyCard {
    background-color: var(--black-bg-5);
    border: 1px solid var(--white-38);
    border-radius: 5px;
    padding: 1em;
    height: 100%;
    width: 100%;
}

.dailyCard img {
    width: 100%;
}


.cardFirstLine {
    border-bottom: 1px solid lightgray;
    padding-bottom: 7px;
}

.chartCard {
    border-right: 1px solid lightgrey;
}

.chartClass {
    height: 400px;
    min-width: 100%;
}

.chartIdCardClass {
    height: 130px;
    min-width: 100%;
}

.chartIdDailyClass {
    height: 100px;
    min-width: 100%;
}

.candlestickClass {
    height: 500px;
    min-width: 100%;
}

.dayNumber {
    font-size: small !important;
}

.numXSmall {
    font-size: x-small;
}

.calDivDay {
    margin: 1px;
    border: 1px solid lightgray;
    height: 40px;
    width: 40px;
}

.calDivDash p {
    font-size: smaller;
}

.calDivDash {
    margin: 1px;
    border: 1px solid lightgray;
    height: 40px;
    width: 40px;
}

@media (min-width: 768px) {
    .calDivDash {
        margin: 1px;
        border: 1px solid lightgray;
        height: 90px;
        width: 40px;
        padding: 1em;
    }

}

.calDivDash p {
    margin: 0;
}

.miniCalCol {
    max-width: 400px !important;
}

.miniCalBox {
    width: 1%;
}

.calDivMini {
    margin: 1px;
    border: 1px solid lightgray;
    height: 9px;
    width: 9px;
    padding: 1em;
}

.dashInfoTitle {
    font-size: x-small;
    color: var(--white-60);
    font-weight: bold;
}

.titleWithDesc {
    margin-bottom: -5px;
}

.diaryRow {
    margin-bottom: -0.8rem !important;
}

/* TIMELINE */

ul.timeline {
    list-style-type: none;
    position: relative;
}

ul.timeline:before {
    content: ' ';
    background: #d4d9df;
    display: inline-block;
    position: absolute;
    left: 29px;
    width: 2px;
    height: 100%;
    z-index: 400;
}

ul.timeline>li {
    margin: 20px 0;
    padding-left: 20px;
    background-color: white;
    border: 1px solid white;
    box-shadow: 1px 1px 4px 4px rgba(176, 176, 176, 0.2);
    -webkit-box-shadow: 1px 1px 4px 4px rgba(176, 176, 176, 0.2);
    -moz-box-shadow: 1px 1px 4px 4px rgba(176, 176, 176, 0.2);
}

ul.timeline>li:before {
    content: ' ';
    background: white;
    display: inline-block;
    position: absolute;
    border-radius: 50%;
    border: 3px solid #01B4FF;
    left: 20px;
    width: 20px;
    height: 20px;
    z-index: 400;
    margin-top: 1em;
}

.noteDateDiv {
    color: #2ea2d9;
    font-size: smaller;
    margin-top: 1.3em;
}

.popoverDelete {
    color: var(--red-color);
    padding-right: 1.5rem;
}

.popover {
    background-color: var(--black-bg-7);
}

.popover-body {
    color: var(--white-60);
}

.theme-bg-dark {
    background: #223142;
    color: white;
}

@media (min-width: 1200px) {
    .twoLines {
        -webkit-line-clamp: 2;
        -webkit-box-orient: vertical;
        overflow: hidden;
        text-overflow: ellipsis;
        display: -webkit-box;
    }
}

/* BUTTONS */
.blueBtn {
    background: var(--blue-color);
    color: var(--white-87);
}

.blueBtn:hover {
    background: var(--blue-active-color);
}

/* FOOTER BOTTOM */

table {
    color: var(--white-87) !important;
}

.table>:not(caption)>*>* {
    background-color: var(--black-bg-5) !important;
    color: var(--white-87);
}

.scrolling-wrapper {
    overflow: auto;
    white-space: nowrap;
}


/* FORECAST TABLE */

.forecastTable th {
    background-color: var(--black-bg-7) !important;
}

.forecastTable th:first-child,
td:first-child {
    position: sticky;
    left: 0px;
    background-color: var(--black-bg-7) !important;
}

/*.forecastTable th, td:not(:first-child) {
    background-color: var(--black-bg-5) !important;
    font-size: small;
    text-align: center;
}*/

.forecastTable {
    font-size: small;
    text-align: center;
}


/*=================== /CUSTOMIZING MODULES/ ===================*/
.ql-editor .ql-bg-blue {
    background-color: var(--blue-active-color);
}

.ql-editor .ql-color-blue {
    color: var(--blue-active-color);
}

.ql-snow.ql-toolbar button:hover,
.ql-snow .ql-toolbar button:hover,
.ql-snow.ql-toolbar button:focus,
.ql-snow .ql-toolbar button:focus,
.ql-snow.ql-toolbar button.ql-active,
.ql-snow .ql-toolbar button.ql-active,
.ql-snow.ql-toolbar .ql-picker-label:hover,
.ql-snow .ql-toolbar .ql-picker-label:hover,
.ql-snow.ql-toolbar .ql-picker-label.ql-active,
.ql-snow .ql-toolbar .ql-picker-label.ql-active,
.ql-snow.ql-toolbar .ql-picker-item:hover,
.ql-snow .ql-toolbar .ql-picker-item:hover,
.ql-snow.ql-toolbar .ql-picker-item.ql-selected,
.ql-snow .ql-toolbar .ql-picker-item.ql-selected {
    color: var(--blue-active-color);
}
/* ... */

